--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "lodash.throttle": "^4.1.1",
+    "uuidv4": "^6.2.5"
   }
 }
