--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "basiclightbox": "^5.0.3",
     "core-js": "^3.6.5",
     "handlebars": "^4.7.6",
     "lodash.throttle": "^4.1.1",
+    "siema": "^1.5.1",
     "uuidv4": "^6.2.5"
   }
 }
