--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lodash.throttle": "^4.1.1",
     "popper.js": "^1.16.1",
     "siema": "^1.5.1",
+    "toastr": "^2.1.4",
     "uuidv4": "^6.2.5"
   }
 }
