--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "basiclightbox": "^5.0.3",
     "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "handlebars": "^4.7.6",
     "jquery": "^3.5.1",
     "lodash.throttle": "^4.1.1",
