--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --env.mode development --config ./webpack/config.js",
     "build": "webpack --env.mode production --config ./webpack/config.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -55,6 +56,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
     "jquery": "^3.5.1",
+    "json-server": "^0.16.3",
     "lodash.throttle": "^4.1.1",
     "popper.js": "^1.16.1",
     "siema": "^1.5.1",
